--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #f0efd6;
+    background-color: #eceaea;
 }
 
 .barra-nav {
     height: 50px;
     background-color: rgb(21, 181, 255);
+    border-radius: 0 0 15px 15px;
 }
 
 .grid-buscarcep {
@@ -38,12 +39,12 @@ body {
 
 
 #cep {
-    width: 500px;
+    width: 300px;
     height: 30px;
     grid-column-start: 1;
-    border: 1px solid #999999;
+    border: 1px solid #b8b8b8;
     border-radius: 4px;
-    background-color: #f4f2c2;;
+    background-color: #ffffff;
 }
 
 /* #cep:focus {
@@ -52,7 +53,7 @@ body {
 } */
 
 .btn {
-    width: 250px;
+    width: 150px;
     height: 30px;
     grid-column-start: 1;
     background-color: rgb(21, 181, 255);
@@ -102,8 +103,11 @@ body {
 
 .container-tabela{
     border-radius: 5px;
-    border: 1px solid #999999;
-    background-color: #f4f2c2;;
+    border-left: 1px solid #999999;
+    border-right: 1px solid #999999;
+    border-bottom: 1px solid #999999;
+    border-top: 5px solid rgb(21, 181, 255);
+    background-color: #ffffff;
     grid-column-start: 2;
     /* display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -113,7 +117,7 @@ body {
 
 .btn2 {
     margin-top: 10px;
-    width: 250px;
+    width: 150px;
     height: 30px;
     grid-column-start: 2;
     background-color: rgb(21, 181, 255);
